--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Create a html report from WoS text records
+Run 
+bash all-part.sh
+
 2011-04-28 10:57 (CEST)
 Topic=(nanoparticl*) AND Year Published=(2009-2011) AND Address=(Russia)
 Timespan=All Years. Databases=SCI-EXPANDED, SSCI. 
